# api-pontos-turisticos-drf

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api-pontos-turisticos/: Dockerfile  Makefile  pyproject.toml
api-pontos-turisticos/app/accounts/: managers.py  serializers.py  urls.py  views.py
api-pontos-turisticos/app/attractions/: apps.py  serializers.py
api-pontos-turisticos/app/comment/: actions.py  admin.py  models.py  (+1 more)
api-pontos-turisticos/config/: settings.py
api-pontos-turisticos/tests/: conftest.py
app/accounts/: apps.py  backends.py  models.py  serializers.py  urls.py  views.py
app/address/: apps.py  models.py  serializers.py  urls.py  views.py
app/atracoes/: models.py  serializers.py  urls.py  views.py
app/attractions/: admin.py  apps.py  models.py  serializers.py  views.py
app/avaliacoes/: apps.py  serializers.py  urls.py  views.py
app/comentarios/: admin.py  apps.py  models.py  urls.py  views.py
app/comment/: actions.py  admin.py  models.py  serializers.py  urls.py  views.py
app/common/: choices.py  view.py
app/core/: urls.py  views.py
app/enderecos/: urls.py
app/pontos_turisticos/: apps.py  models.py  serializers.py  views.py
app/reviews/: apps.py  models.py  serializers.py  signals.py  views.py
app/touristic_points/: admin.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
scripts/: run.sh
tests/: conftest.py  constants.py
tests/accounts/: test_create_user.py
tests/touristic_points/: test_create_touristic_points.py  test_list_touristic_points.py
(+43 files in other folders)
